resources/service.yml
apiVersion: v1
kind: Service
metadata:
  name: myapp-service
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    app: myapp
  type: LoadBalancer
